--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: PHPing.me
 description: Overview of PHP essetials and it userland 
 canonical: http://phping.me 
 owner:
-  - twitter: seva_dolgopolov
+  twitter: seva_dolgopolov
 
 links:
   - title: Functions
